# seedenv

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: client.rs  crypto.rs  input.rs  main.rs  parser.rs
